--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="source/assets/images/favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Social links profile</title>
@@ -17,7 +17,7 @@
       /* Import font from local */
       @font-face {
         font-family: Inter;
-        src: url("assets/fonts/Inter-VariableFont_slnt,wght.ttf");
+        src: url("source/assets/fonts/Inter-VariableFont_slnt,wght.ttf");
       }
 
       /* Set the root */
@@ -141,7 +141,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="assets/images/avatar-jessica.jpeg" alt="Jessica image" />
+      <img src="source/assets/images/avatar-jessica.jpeg" alt="Jessica image" />
       <div class="info">
         <div class="name">Jessica Randall</div>
         <div class="address">London, United Kingdom</div>
