--- a/index.html
+++ b/index.html
@@ -19,24 +19,43 @@
     <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <img
         src="./sources/assets/images/avatar-jessica.jpeg"
-        alt="Jessica image"
+        alt="Portrait of Jessica Randall, Front-end developer and avid reader"
       />
-      <div class="info">
-        <div class="name">Jessica Randall</div>
-        <div class="address">London, United Kingdom</div>
-      </div>
-      <div class="career">"Front-end developer and avid reader."</div>
-
-      <div class="contact">
-        <button>GitHub</button>
-        <button>Frontend Mentor</button>
-        <button>LinkedIn</button>
-        <button>Twitter</button>
-        <button>Instagram</button>
-      </div>
-    </div>
+      <section class="user-info">
+        <h1 class="user-name">Jessica Randall</h1>
+        <p class="user-address">London, United Kingdom</p>
+      </section>
+      <p class="user-career">"Front-end developer and avid reader."</p>
+      <button class="user-contacts" aria-label="Visit Jessica's GitHub profile">
+        GitHub
+      </button>
+      <button
+        class="user-contacts"
+        aria-label="Visit Jessica's Frontend Mentor profile"
+      >
+        Frontend Mentor
+      </button>
+      <button
+        class="user-contacts"
+        aria-label="Visit Jessica's LinkedIn profile"
+      >
+        LinkedIn
+      </button>
+      <button
+        class="user-contacts"
+        aria-label="Visit Jessica's Twitter profile"
+      >
+        Twitter
+      </button>
+      <button
+        class="user-contacts"
+        aria-label="Visit Jessica's Instagram profile"
+      >
+        Instagram
+      </button>
+    </main>
   </body>
 </html>
